Changelog
=========

4.21-dev - (unreleased)
-----------------------
 * Bug fix: fixed floating issues with related portlets [ichimdav #5157]
 * Change: geotags migration script is now transaction aware
   [ghicaale refs #4778]
 * Bug fix: added body text in cft_listing_view
   [tiberich #5111]

4.20 - (2012-04-27)
-------------------
 * Bug fix: added view replacement for unicodeInTest
   [tiberich #5106]

4.19 - (2012-04-26)
-------------------
 * Upgrade step: go to portal_setup > upgrades > Products.EEAContentTypes:default
   and run the Enabled CloudVideo contenttype from EEAContentTypes step
 * Bug fix: do not show an empty portlet when there are no videos related.
   [demarant]
 * Bug fix: added override for wysiwyg template which always shows richtext editor
   [tiberich #5055]

4.18 - (2012-03-30)
-------------------
 * Upgrade step: import profile "Upgrade profile for EEAContentTypes 4.17" >
   Skins tool [tiberich #4982];
   Set default location for ExternalDataSpec, in portal_relations, to 
   python:object.restrictedTraverse("/www/SITE/data-and-maps/data/external-datasets-catalog")
   Add a new portlet in the Faceted criteria tab, with type "Plone Portlet" and
       title: Create new
       path: here/portlet_addcontent/macros/portlet
 * Bug fix: Fixed eea_keywords macros
   [voineali #5021]
 * Bug fix: fixed unicode error when object id is normalized
   [ghicaale #4998]
 * Feature: a portlet that can be used in the eea.relations portlet to add
   new content in a simple popup form
   [tiberich #4982]
 * Change: relocated the schemata_edit functionality from eea.indicators here
   [tiberich #4982]
 * Bug fix: load workflow emails information with ajax in content_modify_form
   [tiberich #5037]

4.17 - (2012-03-05)
-------------------
 * Feature: added cloudUrl validator which is used by the cloudUrl field for flv video
   to check validation of url, extract the video id, and serve a normalized url
   [ichimdav #4963]